--- a/index2.html
+++ b/index2.html
@@ -208,7 +208,7 @@
         max-width: 100vw;
         border-radius: 0 !important;
         /* box-shadow: none !important;  <-- REMOVIDO para manter a sombra */
-        background: rgba(0,0,0,0.3);
+        background: rgba(0,0,0,0.2);
       }
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
@@ -249,20 +249,12 @@
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-        <img class="icon-img" src="facebook.svg" alt="Facebook">
-        <span class="icon-label">Facebook</span>
-      </a>
       <a class="icon-link" href="https://instagram.com/liveitatiba" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
-        <img class="icon-img" src="tiktok.svg" alt="TikTok">
-        <span class="icon-label">TikTok</span>
-      </a>
-      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Live!">
-        <img class="icon-img" src="logo.png" alt="Site">
+      <a class="icon-link" href="https://www.liveoficial.com.br/" target="_blank" rel="noopener noreferrer" aria-label="Site Live!">
+        <img class="icon-img" src="logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail">
