--- a/index2.html
+++ b/index2.html
@@ -254,7 +254,7 @@
         <span class="icon-label">Instagram</span>
       </a>
       <a class="icon-link" href="https://www.liveoficial.com.br/" target="_blank" rel="noopener noreferrer" aria-label="Site Live!">
-        <img class="icon-img" src="logo3.png" alt="Site">
+        <img class="icon-img" src="logo/logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail">
