--- a/index1.html
+++ b/index1.html
@@ -261,7 +261,7 @@
         <span class="icon-label">TikTok</span>
       </a>
       <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
-        <img class="icon-img" src="logo.png" alt="Site">
+        <img class="icon-img" src="logo/logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
