--- a/index2.html
+++ b/index2.html
@@ -231,7 +231,7 @@
     <h1>Studio Live! Itatiba</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
-      <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato">
+      <a class="destaque-link phone" href="contato2.vcf" download aria-label="Salvar contato">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
