--- a/index3.html
+++ b/index3.html
@@ -1,1 +1,349 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Links do Grupo Corcelli loja 01</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: url('fundoapp1.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+    .container {
+      margin: 0 auto;
+      padding: 40px 20px;
+      max-width: 500px;
+      background: rgba(0,0,0,0.45);
+      border-radius: 20px;
+    }
+    .logo-fade {
+      position: relative;
+      width: 130px;
+      height: 130px;
+      margin: 0 auto 25px;
+    }
+    .logo-img {
+      position: absolute;
+      left: 0; top: 0;
+      width: 130px; height: 130px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #fff;
+      box-shadow: 0 2px 6px #0002;
+      background: #fff;
+      transition: opacity 0.7s;
+      opacity: 0;
+      z-index: 1;
+    }
+    .logo-img.show { opacity: 1; z-index: 2; }
 
+    h1, .redes-title, .destaque-label, .icon-label {
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    .redes-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 32px 0 22px;
+    }
+    .destaque-row {
+      display: flex;
+      justify-content: center;
+      gap: 60px;
+      margin-bottom: 36px;
+    }
+    .destaque-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      cursor: pointer;
+    }
+    .destaque-link:active,
+    .destaque-link:focus,
+    .destaque-link:hover {
+      opacity: 0.9;
+      transform: translateY(-1px) scale(1.04);
+    }
+    .icon-img {
+      width: 80px; height: 80px;
+      border-radius: 50%;
+      object-fit: contain;
+      background: #fff;
+      box-shadow: 0 2px 6px #0001;
+      margin-bottom: 4px;
+      padding: 4px;
+      border: 2px solid #eee;
+      transition: box-shadow 0.2s;
+    }
+    .destaque-link .icon-img {
+      width: 70px; height: 70px;
+      border-radius: 40%;
+      margin-bottom: 6px;
+      border: 2px solid #eee;
+      background: #1877F3;
+      border-color: #1257A3;
+    }
+    .destaque-label {
+      font-size: 14px;
+      font-weight: bold;
+      margin-top: 2px;
+    }
+    .icon-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px 12px;
+      justify-items: center;
+      margin-bottom: 16px;
+    }
+    .icon-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+      cursor: pointer;
+    }
+    .icon-link:active,
+    .icon-link:focus,
+    .icon-link:hover {
+      opacity: 0.9;
+      transform: translateY(-2px) scale(1.03);
+    }
+    .icon-label {
+      font-size: 10px;
+      font-weight: 500;
+      margin-top: 1px;
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    .carousel-wrapper {
+      width: 100vw;
+      max-width: 530px;
+      overflow: hidden;
+      margin: 10px auto 0;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px #0005;
+      background: #fff;
+      position: relative;
+    }
+    .carousel {
+      display: flex;
+      transition: transform 0.4s cubic-bezier(.4,1,.3,1);
+      will-change: transform;
+    }
+    .carousel img {
+      width: 100%;
+      max-width: none;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      flex-shrink: 0;
+      user-select: none;
+      pointer-events: none;
+      display: block;
+      background: #eee;
+    }
+    .carousel-dots {
+      position: absolute;
+      bottom: 8px;
+      left: 0; right: 0;
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+    }
+    .carousel-dot {
+      width: 10px; height: 10px;
+      border-radius: 50%;
+      background: #fff;
+      border: 1.5px solid #888;
+      opacity: 0.7;
+      transition: background 0.3s, opacity 0.3s;
+      cursor: pointer;
+    }
+    .carousel-dot.active {
+      background: #007aff;
+      opacity: 1;
+      border-color: #007aff;
+    }
+    @media (max-width: 500px) {
+      .container, .carousel-wrapper {
+        max-width: 100vw;
+        border-radius: 0 !important;
+        box-shadow: none !important;
+        background: rgba(0,0,0,0.5);
+      }
+      .container { max-width: 98vw; padding: 10vw 1vw; }
+      .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
+      .icon-img,
+      .destaque-link .icon-img { width: 70px; height: 70px; }
+      .logo-fade, .logo-img { width: 90px; height: 90px;}
+      .destaque-label { font-size: 12px; }
+    }
+  </style>
+</head>
+<body>
+  <main class="container">
+    <div class="logo-fade" id="logo-fade">
+      <img class="logo-img show" src="logo/logo1.png" alt="Logo Corcelli cor 1">
+      <img class="logo-img" src="logo/logo2.png" alt="Logo Corcelli cor 2">
+      <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
+      <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
+    </div>
+    <h1>Grupo Corcelli Loja01</h1>
+    <div class="redes-title">Acesse nossas redes sociais</div>
+    <div class="destaque-row">
+      <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+        <img class="icon-img" src="contato.svg" alt="Salvar contato">
+        <span class="destaque-label">Salvar contato</span>
+      </a>
+      <a class="destaque-link phone" href="tel:114524-1485" aria-label="Ligar para Grupo Corcelli">
+        <img class="icon-img" src="call.svg" alt="Telefone">
+        <span class="destaque-label">Ligar</span>
+      </a>
+      <a class="destaque-link phone" href="https://maps.app.goo.gl/MF9RV9H7D4gPbi7DA" aria-label="Endereço Matriz Grupo Corcelli">
+        <img class="icon-img" src="address.svg" alt="Endereço">   
+        <span class="destaque-label">Endereço</span>
+      </a>
+    </div>
+    <div class="icon-grid">
+      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Grupo%20Corcelli!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+        <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
+        <span class="icon-label">WhatsApp</span>
+      </a>
+      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+        <img class="icon-img" src="facebook.svg" alt="Facebook">
+        <span class="icon-label">Facebook</span>
+      </a>
+      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+        <img class="icon-img" src="instagram.svg" alt="Instagram">
+        <span class="icon-label">Instagram</span>
+      </a>
+      <a class="icon-link" href="https://www.tiktok.com/@grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+        <img class="icon-img" src="tiktok.svg" alt="TikTok">
+        <span class="icon-label">TikTok</span>
+      </a>
+      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
+        <img class="icon-img" src="logo/logo3.png" alt="Site">
+        <span class="icon-label">Site</span>
+      </a>
+      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+        <img class="icon-img" src="email.svg" alt="E-mail">
+        <span class="icon-label">E-mail</span>
+      </a>
+    </div>
+    <footer>
+      &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
+    </footer>
+  </main>
+  <div class="carousel-wrapper">
+    <div class="carousel" id="carousel"></div>
+    <div class="carousel-dots" id="carousel-dots"></div>
+  </div>
+  <script>
+    // LOGO FADING EFFECT
+    (() => {
+      const logos = document.querySelectorAll('#logo-fade .logo-img');
+      let logoIdx = 0;
+      setInterval(() => {
+        logos[logoIdx].classList.remove('show');
+        logoIdx = (logoIdx + 1) % logos.length;
+        logos[logoIdx].classList.add('show');
+      }, 1800);
+    })();
+
+    // CAROUSEL
+    const images = [
+      "carrossel/img1.PNG","carrossel/img2.PNG","carrossel/img3.PNG","carrossel/img4.PNG","carrossel/img5.PNG",
+      "carrossel/img6.PNG","carrossel/img7.PNG","carrossel/img8.PNG","carrossel/img9.PNG","carrossel/img10.PNG"
+    ];
+    const carousel = document.getElementById('carousel');
+    const dotsContainer = document.getElementById('carousel-dots');
+    let idx = 0, intervalId = null, dragging = false, startX = 0, lastDx = 0;
+
+    images.forEach((src, i) => {
+      const img = document.createElement('img');
+      img.src = src;
+      img.alt = `Imagem do carrossel ${i+1}`;
+      carousel.appendChild(img);
+      const dot = document.createElement('span');
+      dot.className = 'carousel-dot' + (i === 0 ? ' active' : '');
+      dot.onclick = () => goToSlide(i, true);
+      dotsContainer.appendChild(dot);
+    });
+
+    function getSlideWidth() {
+      return document.querySelector('.carousel-wrapper').offsetWidth;
+    }
+    function updateCarouselWidth() {
+      const w = getSlideWidth();
+      carousel.style.width = (w * images.length) + 'px';
+      Array.from(carousel.children).forEach(img => img.style.width = w + 'px');
+    }
+    function updateDots() {
+      document.querySelectorAll('.carousel-dot').forEach((dot, i) =>
+        dot.classList.toggle('active', i === idx)
+      );
+    }
+    function goToSlide(i, resetTimer) {
+      idx = (i + images.length) % images.length;
+      carousel.style.transform = `translateX(-${idx * getSlideWidth()}px)`;
+      updateDots();
+      if (resetTimer) {
+        clearInterval(intervalId);
+        intervalId = setInterval(() => goToSlide(idx + 1), 2000);
+      }
+    }
+    intervalId = setInterval(() => goToSlide(idx + 1), 2000);
+
+    window.addEventListener('resize', () => { updateCarouselWidth(); goToSlide(idx); });
+    window.addEventListener('DOMContentLoaded', () => { updateCarouselWidth(); goToSlide(0); });
+
+    // Unified drag for mouse/touch
+    function dragStart(x) {
+      dragging = true;
+      startX = x;
+      lastDx = 0;
+      carousel.style.transition = 'none';
+      clearInterval(intervalId);
+    }
+    function dragMove(x) {
+      if (!dragging) return;
+      lastDx = x - startX;
+      carousel.style.transform = `translateX(${-idx * getSlideWidth() + lastDx}px)`;
+    }
+    function dragEnd() {
+      if (!dragging) return;
+      dragging = false;
+      carousel.style.transition = '';
+      if (lastDx > 50) goToSlide(idx - 1, true);
+      else if (lastDx < -50) goToSlide(idx + 1, true);
+      else goToSlide(idx, true);
+      lastDx = 0;
+    }
+    // Touch events
+    carousel.addEventListener('touchstart', e => dragStart(e.touches[0].clientX));
+    carousel.addEventListener('touchmove', e => dragMove(e.touches[0].clientX));
+    carousel.addEventListener('touchend', dragEnd);
+    // Mouse events
+    carousel.addEventListener('mousedown', e => { e.preventDefault(); dragStart(e.clientX); });
+    window.addEventListener('mousemove', e => dragMove(e.clientX));
+    window.addEventListener('mouseup', dragEnd);
+    carousel.addEventListener('mouseleave', dragEnd);
+  </script>
+</body>
+</html>
