--- a/index1.html
+++ b/index1.html
@@ -93,7 +93,7 @@
     }
     .destaque-label {
       font-size: 14px;
-      font-weight: bold;
+      font-weight: 500;
       margin-top: 1px;
     }
     .icon-grid {
