--- a/index1.html
+++ b/index1.html
@@ -55,7 +55,7 @@
     .destaque-row {
       display: flex;
       justify-content: center;
-      gap: 30px;
+      gap: 30px 12px;
       margin-bottom: 36px;
     }
     .destaque-link {
