--- a/index1.html
+++ b/index1.html
@@ -55,8 +55,8 @@
     .destaque-row {
       display: flex;
       justify-content: center;
-      gap: 30px 12px;
-      margin-bottom: 36px;
+      gap: 30px;
+      margin-bottom: 16px;
     }
     .destaque-link {
       display: flex;
