--- a/index3.html
+++ b/index3.html
@@ -164,10 +164,10 @@
 <body>
   <main class="container">
     <div class="logo-fade" id="logo-fade">
-      <img class="logo-img show" src="logo/logo1.png" alt="Logo Corcelli cor 1">
-      <img class="logo-img" src="logo/logo2.png" alt="Logo Corcelli cor 2">
-      <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
-      <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
+      <img class="logo-img show" src="logo3/logo1.png" alt="Logo Corcelli cor 1">
+      <img class="logo-img" src="logo3/logo2.png" alt="Logo Corcelli cor 2">
+      <img class="logo-img" src="logo3/logo3.png" alt="Logo Corcelli cor 3">
+      <img class="logo-img" src="logo3/logo4.png" alt="Logo Corcelli cor 4">
     </div>
     <h1>Concept Store</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
