--- a/index3.html
+++ b/index3.html
@@ -231,8 +231,8 @@
 
     // CAROUSEL
     const images = [
-      "carrossel/img1.PNG","carrossel/img2.PNG","carrossel/img3.PNG","carrossel/img4.PNG","carrossel/img5.PNG",
-      "carrossel/img6.PNG","carrossel/img7.PNG","carrossel/img8.PNG","carrossel/img9.PNG","carrossel/img10.PNG"
+      "carrossel3/img1.PNG","carrossel3/img2.PNG","carrossel3/img3.PNG","carrossel3/img4.PNG","carrossel3/img5.PNG",
+      "carrossel3/img6.PNG","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG"
     ];
     const carousel = document.getElementById('carousel');
     const dotsContainer = document.getElementById('carousel-dots');
