--- a/index3.html
+++ b/index3.html
@@ -23,26 +23,26 @@
       border-radius: 20px;
     }
     .logo-fade {
-      position: relative;
       width: 130px;
       height: 130px;
       margin: 0 auto 25px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .logo-img {
-      position: absolute;
-      left: 0; top: 0;
-      width: 130px; height: 130px;
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
       object-fit: cover;
       border: 4px solid #fff;
       box-shadow: 0 2px 6px #0002;
       background: #fff;
-      transition: opacity 0.7s;
-      opacity: 0;
-      z-index: 1;
+      animation: girar 2s linear infinite;
     }
-    .logo-img.show { opacity: 1; z-index: 2; }
-
+    @keyframes girar {
+      100% { transform: rotate(360deg); }
+    }
     h1, .redes-title {
       color: #fff;
       text-shadow: 0 1px 4px #0009;
@@ -163,15 +163,13 @@
 </head>
 <body>
   <main class="container">
-    <div class="logo-fade" id="logo-fade">
-      <img class="logo-img show" src="logo3/logo1.png" alt="Logo Corcelli cor 1">
-      <img class="logo-img" src="logo3/logo2.png" alt="Logo Corcelli cor 2">
-      <img class="logo-img" src="logo3/logo3.png" alt="Logo Corcelli cor 3">
-      <img class="logo-img" src="logo3/logo4.png" alt="Logo Corcelli cor 4">
+    <div class="logo-fade">
+      <img class="logo-img" src="logo3/logo1.png" alt="Logo Corcelli">
     </div>
     <h1>Concept Store</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
+      <!-- ... (links como já estavam) ... -->
       <a class="icon-link" href="contato.vcf" download aria-label="Salvar contato">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="icon-label">Salvar contato</span>
@@ -218,18 +216,7 @@
     <div class="carousel-dots" id="carousel-dots"></div>
   </div>
   <script>
-    // LOGO FADING EFFECT
-    (() => {
-      const logos = document.querySelectorAll('#logo-fade .logo-img');
-      let logoIdx = 0;
-      setInterval(() => {
-        logos[logoIdx].classList.remove('show');
-        logoIdx = (logoIdx + 1) % logos.length;
-        logos[logoIdx].classList.add('show');
-      }, 1800);
-    })();
-
-    // CAROUSEL
+    // CAROUSEL (permanece igual)
     const images = [
       "carrossel3/img1.PNG","carrossel3/img2.PNG","carrossel3/img3.PNG","carrossel3/img4.PNG","carrossel3/img5.PNG",
       "carrossel3/img6.PNG","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG"
