--- a/index3.html
+++ b/index3.html
@@ -182,27 +182,27 @@
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
-      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Grupo%20Corcelli!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Grupo%20Corcelli!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+      <a class="icon-link" href="https://facebook.com/conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Concept Store">
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/conceptstore.Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+      <a class="icon-link" href="https://instagram.com/conceptstore.Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Concept Store">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/@conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+      <a class="icon-link" href="https://www.tiktok.com/@conceptstore.corcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Concept Store">
         <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
-      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
+      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Concept Store">
         <img class="icon-img" src="logo/logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
-      <a class="icon-link" href="mailto:caixa03.1@gmail.com" aria-label="E-mail Grupo Corcelli">
+      <a class="icon-link" href="mailto:caixa03.1@gmail.com" aria-label="E-mail Concept Store">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
@@ -219,7 +219,7 @@
     // CAROUSEL (permanece igual)
     const images = [
       "carrossel3/img1.PNG","carrossel3/img2.PNG","carrossel3/img3.PNG","carrossel3/img4.PNG","carrossel3/img5.PNG",
-      "carrossel3/img6.PNG","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG"
+      "carrossel3/img6.PNG","carrossel3/img7.PNG","carrossel3/img8.PNG","carrossel3/img9.PNG","carrossel3/img10.PNG","carrossel3/img11.PNG"
     ];
     const carousel = document.getElementById('carousel');
     const dotsContainer = document.getElementById('carousel-dots');
