--- a/index3.html
+++ b/index3.html
@@ -170,7 +170,7 @@
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
       <!-- ... (links como já estavam) ... -->
-      <a class="icon-link" href="contato.vcf" download aria-label="Salvar contato">
+      <a class="icon-link" href="contato3.vcf" download aria-label="Salvar contato">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="icon-label">Salvar contato</span>
       </a>
