--- a/index3.html
+++ b/index3.html
@@ -208,7 +208,7 @@
       </a>
     </div>
     <footer>
-      &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
+      &copy; 2025 Concept Store by Corcelli. Todos os direitos reservados.
     </footer>
   </main>
   <div class="carousel-wrapper">
