--- a/index4.html
+++ b/index4.html
@@ -181,7 +181,7 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="icon-label">Ligar</span>
       </a>
-      <a class="icon-link" href="https://maps.app.goo.gl/q9pneA7ZqPneXZPW8" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="icon-link" href="https://g.co/kgs/DzSMkwU" aria-label="Endereço Matriz Grupo Corcelli">
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
