--- a/index1.html
+++ b/index1.html
@@ -180,7 +180,7 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="icon-label">Ligar</span>
       </a>
-      <a class="icon-link" href="https://maps.app.goo.gl/MF9RV9H7D4gPbi7DA" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="icon-link" href="https://g.co/kgs/UpCFmp2" aria-label="Endereço Matriz Grupo Corcelli">
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
