--- a/index6.html
+++ b/index6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links do Grupo Corcelli loja 05</title>
+  <title>Links do Grupo Corcelli loja 06</title>
   <style>
     body {
       margin: 0;
@@ -169,18 +169,18 @@
       <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
       <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
     </div>
-    <h1>Grupo Corcelli Loja05</h1>
+    <h1>Grupo Corcelli Loja06</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
-      <a class="icon-link" href="contato5.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+      <a class="icon-link" href="contato6.vcf" download aria-label="Salvar contato do Grupo Corcelli">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="icon-label">Salvar contato</span>
       </a>
-      <a class="icon-link" href="tel:114538-6995" aria-label="Ligar para Grupo Corcelli">
+      <a class="icon-link" href="tel:1145945040" aria-label="Ligar para Grupo Corcelli">
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="icon-label">Ligar</span>
       </a>
-      <a class="icon-link" href="https://g.co/kgs/pDw2qz4" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="icon-link" href="https://g.co/kgs/Ajr3Hyp" aria-label="Endereço Matriz Grupo Corcelli">
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
@@ -204,7 +204,7 @@
         <img class="icon-img" src="logo/logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
-      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+      <a class="icon-link" href="mailto:caixa06.1@gmail.com" aria-label="E-mail Grupo Corcelli">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
