--- a/index7.html
+++ b/index7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links do Grupo Corcelli loja 05</title>
+  <title>Links do Grupo Corcelli loja 07</title>
   <style>
     body {
       margin: 0;
@@ -169,18 +169,18 @@
       <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
       <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
     </div>
-    <h1>Grupo Corcelli Loja05</h1>
+    <h1>Grupo Corcelli Loja07</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="icon-grid">
-      <a class="icon-link" href="contato5.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+      <a class="icon-link" href="contato7.vcf" download aria-label="Salvar contato do Grupo Corcelli">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="icon-label">Salvar contato</span>
       </a>
-      <a class="icon-link" href="tel:114538-6995" aria-label="Ligar para Grupo Corcelli">
+      <a class="icon-link" href="tel:1938761720" aria-label="Ligar para Grupo Corcelli">
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="icon-label">Ligar</span>
       </a>
-      <a class="icon-link" href="https://g.co/kgs/pDw2qz4" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="icon-link" href="https://g.co/kgs/mC3GuQc" aria-label="Endereço Matriz Grupo Corcelli">
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
@@ -188,11 +188,11 @@
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+      <a class="icon-link" href="https://facebook.com/corcellivinhedo" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+      <a class="icon-link" href="https://instagram.com/Corcellivinhedo" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
@@ -204,7 +204,7 @@
         <img class="icon-img" src="logo/logo3.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
-      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+      <a class="icon-link" href="mailto:caixa07.1@gmail.com" aria-label="E-mail Grupo Corcelli">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
