--- a/index2.html
+++ b/index2.html
@@ -239,7 +239,7 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
-      <a class="destaque-link phone" href="https://maps.app.goo.gl/nD4ycMeUo2ZZ8UX58" aria-label="Endereço Loja">
+      <a class="destaque-link phone" href="https://g.co/kgs/scsNxhf" aria-label="Endereço Loja">
         <img class="icon-img" src="address.svg" alt="Endereço">
         <span class="destaque-label">Endereço</span>
       </a>
