--- a/index3.html
+++ b/index3.html
@@ -178,7 +178,7 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="icon-label">Ligar</span>
       </a>
-      <a class="icon-link" href="https://maps.app.goo.gl/hBNSf2g8xXD2dTdSA" aria-label="Endereço">
+      <a class="icon-link" href="https://g.co/kgs/63JHKAD" aria-label="Endereço">
         <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="icon-label">Endereço</span>
       </a>
