--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Links do Grupo Corcelli loja 01</title>
-  <link rel="stylesheet" href="corcelli.css">
+  <link rel="stylesheet" href="/css/corcelli.css">
  
 </head>
 <body>
